<resources>
    <string name="app_name">Vyapar</string>
    <string name="bill_no">Bill No.</string>
    <string name="date_09_03_2021">Date 13/03/2021</string>
    <string name="add_items_optional">ADD ITEMS (OPTIONAL)</string>
    <string name="total_amt">Total Amt</string>
    <string name="paid_amt">Paid Amt</string>
    <string name="balance_due">Balance Due</string>
    <string name="payment_type">Payment type</string>
    <string name="cash">Cash</string>
    <string name="add_description">Add Description</string>
    <string name="sale">Sale</string>
    <string name="customer">Customer*</string>
    <string name="purchase_transactions">Purchase Transactions</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Store Name</string>
    <string name="nav_header_subtitle">xxxxxxxxxx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_items">Items</string>
    <string name="menu_Business_dashboard">Business Dashboard</string>
    <string name="menu_Reports">Reports</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sales">Sales</string>
    <string name="cash_bank"><![CDATA[Cash & Bank]]></string>
    <string name="settings">Settings</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="vyapar_premium">Vyapar Premium</string>
    <string name="get_destop_billing_software">Get Destop billing software</string>
    <string name="whatsapp_greetings">WhatsApp Greetings</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="utilities">Utilities</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="rate_this_app">Rate this app</string>
    <string name="sale_invoice">Sale Invoice</string>
    <string name="sales_lists">Sales List</string>
    <string name="stock_item_list">Stock Item List</string>
    <string name="purchase_List">Purchase List</string>
    <string name="my_online_store">My Online Store</string>
    <string name="expenses_list">Expenses List</string>
    <string name="bank_account">Bank Account</string>
    <string name="create_online_store">Create Online Store</string>


    <string name="eg_party">e.g. Ram Prasad</string>
    <string name="btn_save">Save</string>
    <string name="contact_number" translatable="false">Contact Number</string>
    <string name="import_parties_select_multiple">Select multiple contacts and add as parties</string>
    <string name="import_parties">Import parties from Contacts</string>
    <string name="this_month">This month :</string>
    <string name="date_start">01/03/2021</string>
    <string name="date_end">to 31/03/2021</string>
    <string name="no_of_txn">No. of Txn</string>
    <string name="total_amnt">Total Amount</string>
    <string name="total_bal">Total Balance</string>
    <string name="billing_add">Billing Address</string>
    <string name="email_add">Email Address</string>
    <string name="gst_type">GST Type</string>
    <string name="state">State</string>
    <string name="open_balance">Opening Balance</string>
    <string name="as_of_date">As of Date</string>
    <string name="add_new_party">Add New Party</string>
    <string name="sale_report">Sale Report</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="general">General</string>
    <string name="transaction">Transaction</string>
    <string name="party">Party</string>
    <string name="item">Item</string>
    <string name="transaction_message">Transaction Message</string>
    <string name="payment_reminder">Payment Reminder</string>
    <string name="invoice_print">Invoice Print</string>
    <string name="taxes_gst"><![CDATA[Taxes & GST]]></string>
    <string name="ab_har_business_banega_digital">Ab har business banega <b>digital</b></string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_product">Add Product</string>
    <string name="item_code_barcode">Item Code / Barcode</string>
    <string name="hsn_sac_code">HSN / SAC Code</string>
    <string name="item_name">Item Name</string>
    <string name="astae">*</string>
    <string name="open_stock">Open Stock</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="big">Big Bazaar</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="add_item">Add Item</string>
    <string name="submit">Submit</string>
    <string name="resend_code_in_40_sec">Resend code in 40 sec</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="change">Change ?</string>
    <string name="services">Services</string>
    <string name="stock_value">Stock Value</string>
    <string name="credit">Credit</string>
    <string name="sign_up">Sign up</string>
    <string name="get_control_of_your_business_with_vyapar">Get control of your business with Vyapar</string>
    <string name="india">INDIA</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="by_continuing_i_agree_the_terms_and_conditions">By continuing, I agree the terms and conditions</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="party_with_asterisk">Party*</string>
    <string name="inv_no">Inv. No.</string>
    <string name="received">Received</string>
    <string name="state_of_supply">State of Supply</string>
    <string name="otp_sent_to_919640024533">Otp sent to +919640024533.</string>
    <string name="pdf">pdf</string>
    <string name="sale_transactions">Sale Transactions</string>
    <string name="sale_invoices">Sale invoices</string>
    <string name="payment_in">Payment in</string>
    <string name="sale_return">Sale Return</string>
    <string name="sale_order">Sale Order</string>
    <string name="estimate_nquotation">Estimate/\nQuotation</string>
    <string name="proforma_n_invoice">Proforma\n Invoice</string>
    <string name="delivery_challan">Delivery Challan</string>
    <string name="purchase">Purchase</string>
    <string name="payment_out">Payment-Out</string>
    <string name="purchase_nreturn">Purchase\nReturn</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="other_transactions">Other Transactions</string>
    <string name="expenses">Expenses</string>
    <string name="expense">Expense</string>
    <string name="expense_no">Expense No.</string>
    <string name="expense_category">Expense Category</string>
    <string name="billed_items">Billed Items</string>
    <string name="item_name_1">Item name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="item_name_2">Item name</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="enter_price">Enter Price</string>
    <string name="add_line_item">Add Line Item</string>
    <string name="save_amp_new"><![CDATA[SAVE & NEW]]></string>
    <string name="product_service_name">Product/Service name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="rate_price_unit">Rate (Price / Unit)</string>
    <string name="tax">Tax</string>
    <string name="save">SAVE</string>
    <string name="petrol">Petrol</string>
    <string name="_390_0">390.0/-</string>
    <string name="customer_1">customer 1</string>
    <string name="paid_amt_100">Paid amt 100</string>
    <string name="_454545">454545</string>
    <string name="sale_1">sale 1</string>
    <string name="total_1515">Total 1515</string>
    <string name="hi_chaithanya_gollapalli">Hi, Chaithanya Gollapalli</string>
    <string name="to_continue_please_login">To continue, please login</string>
    <string name="use_9640024533">USE 9640024533</string>
    <string name="by_continuing_ypu_consent_to_share_your_truecaller_profile_information_nwith_vyapar">By continuing you consent to share your Truecaller profile information\nwith Vyapar</string>
    <string name="instant_verification_by">Instant Verification by</string>
    <string name="service_1">Service 1</string>
    <string name="_90_00">90.00</string>
    <string name="bags_bag">BAGS (Bag)</string>
    <string name="big_bazaar">Big Bazaar</string>
    <string name="_9503483897">9503483897</string>
    <string name="item_1">Item 1</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="_10_0_box">10.0 Box</string>
    <string name="sale_price">Sale Price</string>
    <string name="_10_00">10.00</string>
    <string name="_500_0">500.0</string>
    <string name="ad_purchase">Add Purchase</string>
    <string name="products">Products</string>
    <string name="add_sales">Add Sales</string>
    <string name="total">Total:  </string>
    <string name="gst">GST</string>
    <string name="youll_get">You\'ll Get</string>
    <string name="sale_compose">Sale</string>
    <string name="youll_give">You\'ll Give</string>
    <string name="purchase_compose">Purchase</string>
    <string name="expense_compose">Expense</string>
    <string name="new_party_compose">New Party</string>
    <string name="new_item">New Item</string>
    <string name="search_trans">Search Transactions</string>
    <string name="parties_compose">Parties</string>
    <string name="trans_compose">Transactions</string>
    <string name="items_compose">Items</string>
    <string name="pur_comp">Add Purchase</string>
    <string name="add_sale_compose">Add Sale</string>

    <string-array name="languageList">

        <item>English</item>
        <item>हिन्दी</item>

    </string-array>
</resources>