<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home_nav_bar.setting.SettingsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingGeneral"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingGeneral"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_settings_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/general" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingTransaction"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingTransaction"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_settings_transation__1_"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/transaction" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvParty"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingParty"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_people_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/party" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingItems"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingItems"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_item_settings"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/item" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingTransactionMessage"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingTransactionMessage"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_message_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/transaction_message" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingPaymentReminder"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingPaymentReminder"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_notifications_active_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/payment_reminder" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingInvoicePrint"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingInvoicePrint"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_print_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/invoice_print" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingTaxesGST"
        style="@style/settingCardView">

        <TextView
            android:id="@+id/tvSettingTaxesGST"
            style="@style/settingNameTextView"
            android:drawableStart="@drawable/ic_baseline_book_24"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/taxes_gst" />


    </androidx.cardview.widget.CardView>


</LinearLayout>