<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity.OTPActivity">

    <ImageButton
        android:id="@+id/ibBackOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_24_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVerifying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/verifying_otp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibBackOtp" />

    <TextView
        android:id="@+id/tvEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/otp_sent_to_919640024533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifying" />

    <TextView
        android:id="@+id/tvChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/change"
        android:textColor="@color/app_blue"
        app:layout_constraintStart_toEndOf="@+id/tvEnterOtp"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifying" />

    <EditText
        android:id="@+id/etEnterOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/enter_mobile_box"
        android:ems="10"
        android:hint="@string/enter_otp_code"
        android:inputType="number"
        android:padding="@dimen/dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterOtp" />

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/resend_code_in_40_sec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterOtp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/get_otp_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>