<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home_nav_bar.items.AddProductFragment">

    <!--    Item Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp_20"
            app:cardCornerRadius="@dimen/dp_10"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textSize="@dimen/sp_20"
                    android:drawableStart="@drawable/ic_tick_1"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColor="@color/app_blue" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:elevation="@dimen/dp_20"
            android:padding="@dimen/dp_20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textColor="@color/app_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:text="@string/astae"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toEndOf="@+id/tvItemName"
                    app:layout_constraintTop_toTopOf="@+id/tvItemName" />

                <EditText
                    android:id="@+id/etItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

                <EditText
                    android:id="@+id/etItemCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_code_barcode"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etItemName" />


                <EditText
                    android:id="@+id/etHSN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:hint="@string/hsn_sac_code"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etItemCode" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:elevation="@dimen/dp_20"
            android:padding="@dimen/dp_20">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricing_details"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/sp_15" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <EditText
                    android:id="@+id/etSalePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sale_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etPurchasePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/purchase_price"
                    app:layout_constraintEnd_toEndOf="@+id/etSalePrice"
                    app:layout_constraintStart_toStartOf="@+id/etSalePrice"
                    app:layout_constraintTop_toBottomOf="@+id/etSalePrice" />

                <TextView
                    android:id="@+id/tvTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tax_rate"
                    app:layout_constraintStart_toStartOf="@+id/etPurchasePrice"
                    app:layout_constraintTop_toBottomOf="@+id/etPurchasePrice" />

                <EditText
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/taxes_gst"
                    app:layout_constraintStart_toStartOf="@+id/tvTax"
                    app:layout_constraintTop_toBottomOf="@+id/tvTax" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSaveAddProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_bar_color"
            android:text="@string/save"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>